--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -24,10 +24,12 @@
         {% endif %}
       {% endif %}
     {% endfor %}
+<div class ="sidebar-nav-item">
 
-    <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>
-    <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
-    <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
+   <a   href="{{ site.github.owner_url }}" target="_blank" title="Follow me on GitHub" aria-label="Follow me on GitHub"><i class="fa fa-github"></i></a>
+     &nbsp;&nbsp;
+     <a  href="/atom.xml" title="Atom RSS feed" aria-label="Atom RSS feed"><i class="fa fa-rss"></i></a>
+  </div>
   </nav>
 
   <div class="sidebar-item">
