--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
       })(document);
     </script>
         
-    {% include google-analytics.html %}
+    {% include googleanalytics.html %}
     
   </body>
 </html>
